Fix Manage User dialog. remove scrollbar, resize icons.
BUG=92667
TEST=manual


Review URL: http://codereview.chromium.org/7672006

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@97182 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 533e19efb8a859e6ef392c843e47b088a3ddaf99

--- a/chrome/browser/resources/options/manage_profile_overlay.css
+++ b/chrome/browser/resources/options/manage_profile_overlay.css
@@ -9,14 +9,14 @@
 
 .profile-icon-grid-item {
   border: none !important;
-  height: 38px;
-  margin: 4px;
+  height: 31px;
+  margin: 4px 6px;
   padding: 4px;
   width: 38px;
 }
 
 .profile-icon {
-  height: 38px;
+  height: 31px;
   width: 38px;
 }
 
@@ -70,6 +70,6 @@
 #manage-profile-icon-grid {
   background-color: rgba(255, 255, 255, 0.75);
   border: 1px solid rgba(0, 0, 0, 0.3);
-  height: 150px;
+  padding: 2px;
 }
 
